--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,9 @@
         <div id="login-view" class="view active">
             <h1>浮生十梦</h1>
             <p>此乃试炼之地，请先表明身份。</p>
+            <div id="guest-login-area" class="hidden">
+                <input type="text" id="guest-username" placeholder="输入汝之名号..." class="guest-input">
+            </div>
             <a href="/api/login/linuxdo" class="login-button">使用 Linux.do 登录</a>
             <p id="login-error" class="error-message"></p>
         </div>
